FEAT: implement swagger and erros manager
